--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     <i class="fa-solid fa-bed"></i>
                     <p>2 King Bed</p>
                   </div>
-                  <div class="">
+                  <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -1009,7 +1009,7 @@
         <div class="section-title mb-60 style-2">
           <div class="sec-content">
             <h5 class="short-title">Hotex SERVICES</h5>
-            <h2 class="title">Expert Team Persons</h2>
+            <h2 class="title mb-0">Expert Team Persons</h2>
           </div>
         </div>
         <div class="row justify-content-center">
