--- a/index-2.html
+++ b/index-2.html
@@ -1117,6 +1117,31 @@
       </div>
     </div>
     <!-- Testimonial area style-2 End -->
+    <!-- Brand Slider Area Start -->
+    <div
+      class="brand-slider-area style-1 py-65"
+      style="background-image: url(images/shape/client-slider.png)">
+      <div class="container">
+        <div class="client-logo-slider-wrapper">
+          <div class="client-logo">
+            <img src="images/brand-logo/img-1.png" alt="logo" />
+          </div>
+          <div class="client-logo">
+            <img src="images/brand-logo/img-2.png" alt="logo" />
+          </div>
+          <div class="client-logo">
+            <img src="images/brand-logo/img-3.png" alt="logo" />
+          </div>
+          <div class="client-logo">
+            <img src="images/brand-logo/img-4.png" alt="logo" />
+          </div>
+          <div class="client-logo">
+            <img src="images/brand-logo/img-5.png" alt="logo" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Brand Slider Area End -->
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
