add: project-area style-1

--- a/index-2.html
+++ b/index-2.html
@@ -1143,6 +1143,89 @@
     </div>
     <!-- Brand Slider Area End -->
 
+    <!-- Project area style-1 start -->
+    <div class="project-area style-1 py-140">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="section-title-wrapper">
+              <div class="section-title mb-0 pr-50">
+                <div class="sec-content">
+                  <h5 class="short-title">Our Best Projects</h5>
+                  <h2 class="title mb-30">Our Featured Projects</h2>
+                  <p class="sec-desc">
+                    Proin efficitur, mauris vel condimentum pulvinar, velit orci
+                    consectetur ligula, eget egestas magna mi ut arcu. Phasellus
+                    nec odio orci. Nunc id massa ante. Suspendisse sit amet
+                    neque euismod.
+                  </p>
+                  <div class="mt-30">
+                    <a href="#" class="theme-btn style-3">View All Projects</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="project-slider">
+              <div class="image-card">
+                <div class="image">
+                  <img src="images/image-card/project-1.jpg" alt="project" />
+                </div>
+                <div class="content-wrapper">
+                  <div class="content">
+                    <h3 class="title mb-15">Wellness and Recreation</h3>
+                    <p class="desc mb-15">
+                      Proin efficitur, mauris vel condimentum pulvinar, velit
+                      orci consectetur ligula, eget egestas.
+                    </p>
+                    <div class="link">
+                      <a href="#">Read More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="image-card">
+                <div class="image">
+                  <img src="images/image-card/project-2.jpg" alt="project" />
+                </div>
+                <div class="content-wrapper">
+                  <div class="content">
+                    <h3 class="title mb-15">Wellness and Recreation</h3>
+                    <p class="desc mb-15">
+                      Proin efficitur, mauris vel condimentum pulvinar, velit
+                      orci consectetur ligula, eget egestas.
+                    </p>
+                    <div class="link">
+                      <a href="#">Read More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="image-card">
+                <div class="image">
+                  <img src="images/image-card/project-3.jpg" alt="project" />
+                </div>
+                <div class="content-wrapper">
+                  <div class="content">
+                    <h3 class="title mb-15">Wellness and Recreation</h3>
+                    <p class="desc mb-15">
+                      Proin efficitur, mauris vel condimentum pulvinar, velit
+                      orci consectetur ligula, eget egestas.
+                    </p>
+                    <div class="link">
+                      <a href="#">Read More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Project area style-1 end -->
+
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
