--- a/index-2.html
+++ b/index-2.html
@@ -1259,7 +1259,233 @@
       </div>
     </div>
     <!-- Newsletter Section End !-->
+    <!-- Blog area Start -->
+    <div class="blog-area py-140">
+      <div class="container">
+        <div class="section-title mb-60 style-2">
+          <div class="sec-content">
+            <h5 class="short-title">stay in the loop</h5>
+            <h2 class="title">News & Update</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-5">
+            <div class="blog-card style-2">
+              <div class="image-wrapper">
+                <img
+                  src="images/image-card/info-img-card.jpg"
+                  alt="team member" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content-wrapper">
+                <div class="title-wrapper">
+                  <h3 class="title">Retore Lighting Design in The Hotel</h3>
+                  <p class="desc">
+                    Proin efficitur, mauris vel condimentum pulvinar, velit orci
+                    consectetur ligula, eget egestas magna mi ut arcu. Phasellus
+                    nec odio orci.
+                  </p>
+                  <div class="read-more">
+                    <a href="#">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-7">
+            <div class="blog-card style-3">
+              <div class="image-wrapper">
+                <img src="images/image-card/blog-img-2.jpg" alt="team member" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content-wrapper">
+                <div class="title-wrapper">
+                  <div class="user-meta">
+                    <ul>
+                      <li>
+                        <i class="fa-solid fa-user"></i>
+                        <span>By</span>
+                        Admin
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-calendar-days"></i>
+                        <span>October</span>
+                        19, 2024
+                      </li>
+                    </ul>
+                  </div>
+                  <h3 class="title mt-15 text-white">
+                    24 hour cancellation on flexible bookings
+                  </h3>
+                  <p class="desc mt-15 text-white">
+                    Information about services for businesses, including
+                    large-scale solar installations.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Blog area End -->
 
+    <!--- Start Footer !-->
+    <footer
+      class="footer style-1"
+      style="background-image: url('images/section-bg/footer-1.png')">
+      <div class="overlay"></div>
+      <div class="square-shape">
+        <div class="inner"></div>
+      </div>
+      <div class="bottom-image">
+        <img src="images/logo/logo-text.png" alt="footer background" />
+      </div>
+      <div class="footer-sec">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-xl-3 col-lg-3 col-md-6">
+              <div class="footer-widget">
+                <div class="footer-widget-info">
+                  <div class="footer-logo">
+                    <a href="index.html">
+                      <img
+                        src="images/logo/footer-logo.png"
+                        alt="Footer Logo" />
+                    </a>
+                  </div>
+                  <p>
+                    Proin efficitur, mauris vel condimentum pulvinar, velit orci
+                    consectetur ligula, eget egestas magna mi ut arcu. Phasellus
+                    nec odio orci. Nunc id massa ante. Suspendisse sit amet
+                    neque euismod.
+                  </p>
+                  <div class="social-profile">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#">
+                      <img src="images/icon/twitter.svg" alt="twitter" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-6">
+              <div class="footer-widget widget_nav_menu">
+                <h2 class="footer-widget-title">Get Free Link</h2>
+                <ul>
+                  <li><a href="#">Software Development</a></li>
+                  <li><a href="#">Data Analytics</a></li>
+                  <li><a href="#">IT Consulting</a></li>
+                  <li><a href="#">UI/UX Design</a></li>
+                  <li><a href="#">Network Solutions</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xl-3">
+              <div class="footer-widget">
+                <h2 class="footer-widget-title">Contact</h2>
+                <div class="footer-widget-info">
+                  <div class="footer-widget-contact">
+                    <p>Lorem Ipsum is simply is dumi omy is text dummy text.</p>
+                    <div class="footer-contact">
+                      <ul>
+                        <li>
+                          <div class="contact-icon">
+                            <i class="fa-solid fa-envelope"></i>
+                          </div>
+                          <div class="contact-text">
+                            <a href="mailto:hello@technova.com">
+                              <span>info@example.com</span>
+                            </a>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="contact-icon">
+                            <i class="fa-solid fa-location-dot"></i>
+                          </div>
+                          <div class="contact-text">
+                            <span>6391 Elgin St. Celina, 10299</span>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="contact-icon">
+                            <i class="fa-solid fa-phone"></i>
+                          </div>
+                          <div class="contact-text">
+                            <a href="tel:+1234567890">(629) 555-0129</a>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="subscribe-form-wrapper pt-30 mt-20">
+            <div class="row justify-content-between">
+              <div class="col-lg-4">
+                <div class="footer-widget">
+                  <div class="subscribe-form-title-wrapper">
+                    <h4 class="subscribe-form-title">
+                      Sign Up To Get Latest Update
+                    </h4>
+                    <p class="subscribe-form-desc mt-10">
+                      Sign up for our monthly newsletter for the latest news &
+                      articles
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="footer-widget">
+                  <!-- Newsletter Section Start !-->
+                  <div class="subscribe-form-wrapper">
+                    <div class="subscribe-form-widget">
+                      <form>
+                        <div class="mc4wp-form-fields">
+                          <div class="single-field">
+                            <input
+                              type="email"
+                              placeholder="Enter Your Email" />
+                          </div>
+                          <button class="submit-btn" type="submit">
+                            <i class="fa-solid fa-paper-plane"></i>
+                          </button>
+                        </div>
+                        <p class="mt-10 d-flex gap-2 mb-0 terms-condition">
+                          <input type="checkbox" />
+                          I agree to all terms and policies
+                        </p>
+                      </form>
+                    </div>
+                  </div>
+                  <!-- Newsletter Section End !-->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="footer-bottom-wrapper">
+                <div class="footer-bottom-menu-wrapper">
+                  <div class="copyright-text">
+                    <p>© Copyright 2024 by kodesolution.com</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--- End Footer !-->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
