--- a/index-2.html
+++ b/index-2.html
@@ -1260,7 +1260,7 @@
     </div>
     <!-- Newsletter Section End !-->
     <!-- Blog area Start -->
-    <div class="blog-area py-140">
+    <div class="blog-area style-2 py-140">
       <div class="container">
         <div class="section-title mb-60 style-2">
           <div class="sec-content">
