add: footer style-2

--- a/index-2.html
+++ b/index-2.html
@@ -1332,16 +1332,13 @@
 
     <!--- Start Footer !-->
     <footer
-      class="footer style-1"
+      class="footer style-2"
       style="background-image: url('images/section-bg/footer-1.png')">
       <div class="overlay"></div>
-      <div class="square-shape">
-        <div class="inner"></div>
-      </div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
       </div>
-      <div class="footer-sec">
+      <div class="footer-sec pb-60">
         <div class="container">
           <div class="row justify-content-between">
             <div class="col-xl-3 col-lg-3 col-md-6">
@@ -1354,115 +1351,83 @@
                         alt="Footer Logo" />
                     </a>
                   </div>
-                  <p>
-                    Proin efficitur, mauris vel condimentum pulvinar, velit orci
-                    consectetur ligula, eget egestas magna mi ut arcu. Phasellus
-                    nec odio orci. Nunc id massa ante. Suspendisse sit amet
-                    neque euismod.
-                  </p>
-                  <div class="social-profile">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#">
-                      <img src="images/icon/twitter.svg" alt="twitter" />
-                    </a>
+                  <div class="footer-contact mt-90">
+                    <h3 class="footer-widget-title pb-12">Location</h3>
+                    <div class="contact mt-20">
+                      <i class="fa-solid fa-location-dot"></i>
+                      <span>6391 Elgin St. Celina, 10299</span>
+                    </div>
+                    <div class="mt-30">
+                      <a href="#" class="theme-btn style-3">
+                        View All Projects
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-xl-2 col-lg-6">
-              <div class="footer-widget widget_nav_menu">
-                <h2 class="footer-widget-title">Get Free Link</h2>
-                <ul>
-                  <li><a href="#">Software Development</a></li>
-                  <li><a href="#">Data Analytics</a></li>
-                  <li><a href="#">IT Consulting</a></li>
-                  <li><a href="#">UI/UX Design</a></li>
-                  <li><a href="#">Network Solutions</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-xl-3">
+            <div class="col-xl-8 col-lg-6">
               <div class="footer-widget">
-                <h2 class="footer-widget-title">Contact</h2>
-                <div class="footer-widget-info">
-                  <div class="footer-widget-contact">
-                    <p>Lorem Ipsum is simply is dumi omy is text dummy text.</p>
-                    <div class="footer-contact">
-                      <ul>
-                        <li>
-                          <div class="contact-icon">
-                            <i class="fa-solid fa-envelope"></i>
-                          </div>
-                          <div class="contact-text">
-                            <a href="mailto:hello@technova.com">
-                              <span>info@example.com</span>
-                            </a>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="contact-icon">
-                            <i class="fa-solid fa-location-dot"></i>
-                          </div>
-                          <div class="contact-text">
-                            <span>6391 Elgin St. Celina, 10299</span>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="contact-icon">
-                            <i class="fa-solid fa-phone"></i>
-                          </div>
-                          <div class="contact-text">
-                            <a href="tel:+1234567890">(629) 555-0129</a>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
+                <p class="desc mb-20">
+                  Provide additional resources such as readings, articles,
+                  videos, or online tutorials for learners who want to explore
+                  the details further.Sit amet, consectetur adipiscing elit, sed
+                  do eiusmod.
+                </p>
+                <p class="contact-info">
+                  Booking and Reservation?
+                  <span>Call us at</span>
+                  <a href="tel:+123 45679 00">+123 45679 00</a>
+                </p>
               </div>
-            </div>
-          </div>
-          <div class="subscribe-form-wrapper pt-30 mt-20">
-            <div class="row justify-content-between">
-              <div class="col-lg-4">
-                <div class="footer-widget">
-                  <div class="subscribe-form-title-wrapper">
-                    <h4 class="subscribe-form-title">
-                      Sign Up To Get Latest Update
-                    </h4>
-                    <p class="subscribe-form-desc mt-10">
-                      Sign up for our monthly newsletter for the latest news &
-                      articles
-                    </p>
-                  </div>
-                </div>
+              <div class="mb-12">
+                <h3 class="footer-widget-title pb-12">Location</h3>
               </div>
-              <div class="col-lg-4">
-                <div class="footer-widget">
-                  <!-- Newsletter Section Start !-->
-                  <div class="subscribe-form-wrapper">
-                    <div class="subscribe-form-widget">
-                      <form>
-                        <div class="mc4wp-form-fields">
-                          <div class="single-field">
-                            <input
-                              type="email"
-                              placeholder="Enter Your Email" />
-                          </div>
-                          <button class="submit-btn" type="submit">
-                            <i class="fa-solid fa-paper-plane"></i>
-                          </button>
-                        </div>
-                        <p class="mt-10 d-flex gap-2 mb-0 terms-condition">
-                          <input type="checkbox" />
-                          I agree to all terms and policies
-                        </p>
-                      </form>
-                    </div>
-                  </div>
-                  <!-- Newsletter Section End !-->
+              <div class="footer-widget widget-instagram-feed mt-30">
+                <div class="single-instagram-feed">
+                  <img
+                    class="icon"
+                    src="images/icon/instagram.svg"
+                    alt="instagram" />
+                  <img
+                    src="images/instagram/instagram-1.jpg"
+                    alt="instagram photo" />
+                </div>
+                <div class="single-instagram-feed">
+                  <img
+                    class="icon"
+                    src="images/icon/instagram.svg"
+                    alt="instagram" />
+                  <img
+                    src="images/instagram/instagram-2.jpg"
+                    alt="instagram photo" />
+                </div>
+                <div class="single-instagram-feed">
+                  <img
+                    class="icon"
+                    src="images/icon/instagram.svg"
+                    alt="instagram" />
+                  <img
+                    src="images/instagram/instagram-3.jpg"
+                    alt="instagram photo" />
+                </div>
+                <div class="single-instagram-feed">
+                  <img
+                    class="icon"
+                    src="images/icon/instagram.svg"
+                    alt="instagram" />
+                  <img
+                    src="images/instagram/instagram-4.jpg"
+                    alt="instagram photo" />
+                </div>
+                <div class="single-instagram-feed">
+                  <img
+                    class="icon"
+                    src="images/icon/instagram.svg"
+                    alt="instagram" />
+                  <img
+                    src="images/instagram/instagram-5.jpg"
+                    alt="instagram photo" />
                 </div>
               </div>
             </div>
@@ -1471,15 +1436,22 @@
       </div>
       <div class="footer-bottom-area">
         <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <div class="footer-bottom-wrapper">
-                <div class="footer-bottom-menu-wrapper">
-                  <div class="copyright-text">
-                    <p>© Copyright 2024 by kodesolution.com</p>
-                  </div>
-                </div>
-              </div>
+          <div class="footer-bottom-wrapper">
+            <div class="copyright-text">
+              <p>© Copyright 2024 by kodesolution.com</p>
+            </div>
+            <div class="footer-bottom-menu">
+              <ul>
+                <li>
+                  <a href="#">Facebook</a>
+                </li>
+                <li>
+                  <a href="#">Instagram</a>
+                </li>
+                <li>
+                  <a href="#">Youtube</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
