add: home-1 recheck

--- a/index-2.html
+++ b/index-2.html
@@ -1147,7 +1147,7 @@
     <div class="project-area style-1 py-140">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-xl-4">
             <div class="section-title-wrapper">
               <div class="section-title mb-0 pr-50">
                 <div class="sec-content">
@@ -1166,7 +1166,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-8">
+          <div class="col-xl-8">
             <div class="project-slider">
               <div class="image-card">
                 <div class="image">
@@ -1268,7 +1268,7 @@
             <h2 class="title">News & Update</h2>
           </div>
         </div>
-        <div class="row">
+        <div class="row gy-sm-3">
           <div class="col-lg-5">
             <div class="blog-card style-2">
               <div class="image-wrapper">
