--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
           <div class="col-xxl-7 col-xl-8">
             <div class="about-us-area">
               <div class="row justify-content-between align-items-center">
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-md-8">
                   <div class="about-image-card style-3">
                     <div class="right-bar">
                       <div class="inner-wrapper">
@@ -1240,7 +1240,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="blog-card">
               <div class="image-wrapper">
                 <img src="images/blog-card/image-1.jpg" alt="team member" />
@@ -1275,7 +1275,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="blog-card">
               <div class="image-wrapper">
                 <img src="images/blog-card/image-2.jpg" alt="team member" />
@@ -1310,7 +1310,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6">
             <div class="blog-card">
               <div class="image-wrapper">
                 <img src="images/blog-card/image-3.jpg" alt="team member" />
