add: home-2 responsive check

--- a/index-2.html
+++ b/index-2.html
@@ -290,7 +290,7 @@
         <div class="shape">
           <img src="images/shape/slider-2.png" alt="hotex" />
         </div>
-        <div class="slider-wrapper">
+        <div class="slider-wrapper-two">
           <!-- single slider start -->
           <div class="single-slider-wrapper">
             <div class="single-slider">
@@ -910,7 +910,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-4 col-lg-6 col-md-8">
-            <div class="about-image-card style-3">
+            <div class="about-image-card style-4">
               <div class="image-wrapper">
                 <!-- images module -->
                 <div class="main-img">
