--- a/index-2.html
+++ b/index-2.html
@@ -141,47 +141,31 @@
                         <ul>
                           <li><a href="index.html">Home Page 1</a></li>
                           <li><a href="index-2.html">Home Page 2</a></li>
-                          <!-- <li><a href="index-3.html">Home Page 3</a></li>
-                        <li><a href="index-4.html">Home Page 4</a></li>
-                        <li><a href="index-5.html">Home Page 5</a></li>
-                        <li><a href="index-6.html">Home Page 6</a></li> -->
+                          <!-- <li><a href="index-3.html">Home Page 3</a></li> -->
                         </ul>
                       </li>
                       <li class="dropdown">
                         <a href="about.html">Rooms & Suites</a>
                         <ul class="submenu">
-                          <li><a href="service.html">Service Page</a></li>
+                          <li><a href="service.html">Room List</a></li>
+                          <li><a href="service-2.html">Room Grid</a></li>
                           <li>
-                            <a href="service-details.html">
-                              Service Details Page
-                            </a>
+                            <a href="service-details.html">Room Details</a>
                           </li>
                         </ul>
                       </li>
-                      <!-- <li class="dropdown">
-                        <a href="service.html">Service</a>
-                        <ul class="submenu">
-                          <li><a href="service.html">Service Page</a></li>
-                          <li>
-                            <a href="service-details.html">Service Details Page</a>
-                          </li>
-                        </ul>
-                      </li> -->
                       <li class="dropdown">
                         <a href="project.html">Pages</a>
                         <ul class="submenu">
-                          <li><a href="faq.html">FAQ Page</a></li>
-                          <li><a href="pricing.html">Pricing Page</a></li>
-                          <li><a href="apartment.html">Apartment Page</a></li>
-                          <li><a href="project.html">Project Page</a></li>
-                          <li>
-                            <a href="project-details.html">
-                              Project Details Page
-                            </a>
-                          </li>
+                          <li><a href="faq.html">About</a></li>
+                          <li><a href="pricing.html">About Two</a></li>
                           <li><a href="team-member.html">Team Page</a></li>
                           <li>
                             <a href="team-details.html">Team Details Page</a>
+                          </li>
+                          <li><a href="error.html">404</a></li>
+                          <li>
+                            <a href="team-details.html">Coming Soon</a>
                           </li>
                         </ul>
                       </li>
