add: about page

--- a/index-2.html
+++ b/index-2.html
@@ -145,7 +145,7 @@
                         </ul>
                       </li>
                       <li class="dropdown">
-                        <a href="about.html">Rooms & Suites</a>
+                        <a href="service.html">Rooms & Suites</a>
                         <ul class="submenu">
                           <li><a href="service.html">Room List</a></li>
                           <li><a href="service-2.html">Room Grid</a></li>
@@ -155,10 +155,10 @@
                         </ul>
                       </li>
                       <li class="dropdown">
-                        <a href="project.html">Pages</a>
+                        <a href="#">Pages</a>
                         <ul class="submenu">
-                          <li><a href="faq.html">About</a></li>
-                          <li><a href="pricing.html">About Two</a></li>
+                          <li><a href="about.html">About</a></li>
+                          <li><a href="about-2.html">About Two</a></li>
                           <li><a href="team-member.html">Team Page</a></li>
                           <li>
                             <a href="team-details.html">Team Details Page</a>
