add: room grid view

--- a/service-2.html
+++ b/service-2.html
@@ -311,18 +311,18 @@
             <div class="row">
               <div class="col-lg-6">
                 <div
-                  class="room-card"
-                  style="background-image: url(images/room-card/img-1.jpg)">
+                  class="room-card styel-4 mt-30"
+                  style="background-image: url(images/room-card/v3/img-1.jpg)">
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
                   </div>
                   <div class="content-wrapper">
                     <div class="inner-wrapper">
-                      <h3 class="title">Standard Room</h3>
+                      <h3 class="title">Suprior Bed Rooms</h3>
                       <div class="price-wrapper">
-                        <span class="price">$150</span>
+                        <span class="price">$250</span>
                         <span class="divider"></span>
-                        <span class="day_night">Day</span>
+                        <span class="day_night">Night</span>
                       </div>
                       <div class="rating">
                         <div class="desc">
@@ -343,18 +343,146 @@
               </div>
               <div class="col-lg-6">
                 <div
-                  class="room-card"
-                  style="background-image: url(images/room-card/img-1.jpg)">
+                  class="room-card styel-4 mt-30"
+                  style="background-image: url(images/room-card/v3/img-2.jpg)">
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
                   </div>
                   <div class="content-wrapper">
                     <div class="inner-wrapper">
-                      <h3 class="title">Standard Room</h3>
+                      <h3 class="title">Suprior Bed Rooms</h3>
                       <div class="price-wrapper">
-                        <span class="price">$150</span>
+                        <span class="price">$250</span>
                         <span class="divider"></span>
-                        <span class="day_night">Day</span>
+                        <span class="day_night">Night</span>
+                      </div>
+                      <div class="rating">
+                        <div class="desc">
+                          <i class="fa-solid fa-bed"></i>
+                          <p>2 King Bed</p>
+                        </div>
+                        <div class="stars">
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div
+                  class="room-card styel-4 mt-30"
+                  style="background-image: url(images/room-card/v3/img-3.jpg)">
+                  <div class="booking-btn">
+                    <a href="#">Book Now</a>
+                  </div>
+                  <div class="content-wrapper">
+                    <div class="inner-wrapper">
+                      <h3 class="title">Suprior Bed Rooms</h3>
+                      <div class="price-wrapper">
+                        <span class="price">$250</span>
+                        <span class="divider"></span>
+                        <span class="day_night">Night</span>
+                      </div>
+                      <div class="rating">
+                        <div class="desc">
+                          <i class="fa-solid fa-bed"></i>
+                          <p>2 King Bed</p>
+                        </div>
+                        <div class="stars">
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div
+                  class="room-card styel-4 mt-30"
+                  style="background-image: url(images/room-card/v3/img-4.jpg)">
+                  <div class="booking-btn">
+                    <a href="#">Book Now</a>
+                  </div>
+                  <div class="content-wrapper">
+                    <div class="inner-wrapper">
+                      <h3 class="title">Suprior Bed Rooms</h3>
+                      <div class="price-wrapper">
+                        <span class="price">$250</span>
+                        <span class="divider"></span>
+                        <span class="day_night">Night</span>
+                      </div>
+                      <div class="rating">
+                        <div class="desc">
+                          <i class="fa-solid fa-bed"></i>
+                          <p>2 King Bed</p>
+                        </div>
+                        <div class="stars">
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div
+                  class="room-card styel-4 mt-30"
+                  style="background-image: url(images/room-card/v3/img-5.jpg)">
+                  <div class="booking-btn">
+                    <a href="#">Book Now</a>
+                  </div>
+                  <div class="content-wrapper">
+                    <div class="inner-wrapper">
+                      <h3 class="title">Suprior Bed Rooms</h3>
+                      <div class="price-wrapper">
+                        <span class="price">$250</span>
+                        <span class="divider"></span>
+                        <span class="day_night">Night</span>
+                      </div>
+                      <div class="rating">
+                        <div class="desc">
+                          <i class="fa-solid fa-bed"></i>
+                          <p>2 King Bed</p>
+                        </div>
+                        <div class="stars">
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div
+                  class="room-card styel-4 mt-30"
+                  style="background-image: url(images/room-card/v3/img-6.jpg)">
+                  <div class="booking-btn">
+                    <a href="#">Book Now</a>
+                  </div>
+                  <div class="content-wrapper">
+                    <div class="inner-wrapper">
+                      <h3 class="title">Suprior Bed Rooms</h3>
+                      <div class="price-wrapper">
+                        <span class="price">$250</span>
+                        <span class="divider"></span>
+                        <span class="day_night">Night</span>
                       </div>
                       <div class="rating">
                         <div class="desc">
