--- a/service-2.html
+++ b/service-2.html
@@ -311,7 +311,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <div
-                  class="room-card styel-4 mt-30"
+                  class="room-card styel-4"
                   style="background-image: url(images/room-card/v3/img-1.jpg)">
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
@@ -343,7 +343,7 @@
               </div>
               <div class="col-lg-6">
                 <div
-                  class="room-card styel-4 mt-30"
+                  class="room-card styel-4"
                   style="background-image: url(images/room-card/v3/img-2.jpg)">
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
